# AdvancedVulkanDemos

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  cmd.bat  format.bat  run.bat  styleguide.md
.github/: copilot-instructions.md
assets/shaders/: FontRendererFrag.glsl  FontRendererVert.glsl  MainMenuFrag.glsl  PresentationFrag.glsl  PresentationVert.glsl
avd/: CMakeLists.txt
avd/include/: avd_application.h  avd_base.h  avd_bloom.h  avd_common.h  avd_font.h  avd_font_renderer.h  avd_pipeline_utils.h  avd_scenes.h  avd_shader.h  avd_shader_compiler.h  avd_types.h  avd_vulkan.h  avd_window.h
avd/include/audio/: avd_audio.h  avd_audio_clip.h  avd_audio_core.h  avd_audio_player.h  avd_audio_streaming_player.h
avd/include/bloom/: avd_bloom.h
avd/include/common/: avd_bloom.h  avd_common.h  avd_drawlist.h  avd_eyeball.h  avd_fps_camera.h  avd_gui.h  avd_gui_internal.h  avd_ui.h
avd/include/core/: avd_aligned_buffer.h  avd_base.h  avd_core.h  avd_hashtable.h  avd_input.h  avd_list.h  avd_types.h  avd_utils.h  avd_window.h  avd_window_cb.h
avd/include/font/: avd_font.h  avd_font_renderer.h
avd/include/geom/: avd_2d_geom.h  avd_3d_matrices.h  avd_geom.h  avd_transform.h
avd/include/math/: avd_3d_matrices.h  avd_math.h  avd_math_base.h  avd_math_tests.h  avd_matrix_non_simd.h  avd_qaternion_non_simd.h  avd_vector_non_simd.h
avd/include/model/: avd_3d_scene.h  avd_model.h  avd_model_base.h
avd/include/scenes/: avd_scenes.h  avd_scenes_base.h  avd_scenes_main_menu.h
avd/include/scenes/2d_radiance_cascades/: avd_scenes_2d_radiance_cascades.h
avd/include/scenes/bloom/: avd_scenes_bloom.h
avd/include/scenes/deccer_cubes/: avd_scenes_deccer_cubes.h
avd/include/scenes/eyeballs/: avd_scenes_eyeballs.h
avd/include/scenes/gui/: avd_scenes_gui.h
avd/include/scenes/hls_player/: avd_hls_worker_pool.h  avd_scene_hls_media_cache.h  avd_scene_hls_player_context.h  avd_scene_hls_player_segment_store.h  avd_scene_hls_segment_store.h  avd_scene_hls_stream.h  avd_scene_hls_url_pool.h  avd_scene_hls_worker_pool.h  avd_scenes_hls_player.h
avd/include/scenes/rasterized_gi/: avd_scenes_rasterized_gi.h
avd/include/scenes/realistic_head/: avd_scenes_realistic_head.h
avd/include/scenes/subsurface_scattering/: avd_scenes_subsurface_scattering.h
avd/include/scenes/ui_system_demo/: avd_scenes_ui_system_demo.h
avd/include/shader/: avd_shader.h  avd_shader_base.h  avd_shader_compiler.h  avd_shader_shaderc.h  avd_shader_slang.h
avd/include/ui/: avd_ui.h
avd/include/vulkan/: avd_vulkan.h  avd_vulkan_base.h  avd_vulkan_buffer.h  avd_vulkan_framebuffer.h  avd_vulkan_image.h  avd_vulkan_pipeline_utils.h  avd_vulkan_presentation.h  avd_vulkan_renderer.h  avd_vulkan_swapchain.h  avd_vulkan_video.h
avd/include/vulkan/video/: avd_vulkan_video_core.h  avd_vulkan_video_decoder.h  avd_vulkan_video_dpb.h  avd_vulkan_video_h264_data.h
avd/src/: avd_application.c  avd_bloom.c  avd_font_renderer.c  avd_input.c  avd_main.c  avd_pipeline_utils.c  avd_shader.c  avd_shader_compiler.c  avd_third_party_impls.c  avd_utils.c  avd_vulkan.c  avd_vulkan_buffer.c  avd_vulkan_framebuffer.c  avd_vulkan_image.c  avd_vulkan_presentation.c  avd_vulkan_renderer.c  avd_vulkan_swapchain.c  avd_window.c
avd/src/audio/: avd_audio.c  avd_audio_clip.c  avd_audio_player.c  avd_audio_streaming_player.c
avd/src/bloom/: avd_bloom.c
avd/src/common/: avd_bloom.c  avd_drawlist.c  avd_eyeball.c  avd_fps_camera.c  avd_ui.c
avd/src/common/avd_gui/: avd_gui.c  avd_gui_button.c  avd_gui_checkbox.c  avd_gui_collapsing_header.c  avd_gui_drag.c  avd_gui_dummy.c  avd_gui_hyperlink.c  avd_gui_image.c  avd_gui_image_button.c  avd_gui_label.c  avd_gui_slider.c
avd/src/core/: avd_aligned_buffer.c  avd_hashtable.c  avd_hashtable_tests.c  avd_input.c  avd_list.c  avd_list_tests.c  avd_utils.c  avd_utils_curl.c  avd_utils_curl_tests.c  avd_window.c  avd_window_cb.c
avd/src/font/: avd_font_renderer.c
avd/src/geom/: avd_2d_geom.c  avd_3d_matrices.c  avd_transform.c
avd/src/math/: avd_3d_matrices.c  avd_math_tests.c  avd_matrix_non_simd.c  avd_quaternion_non_simd.c
avd/src/model/: avd_3d_scene.c  avd_meshgen.c  avd_model.c  avd_model_base.c  avd_model_gltf_loader.c  avd_model_obj_loader.c
avd/src/scenes/: avd_scenes.c  avd_scenes_loading.c  avd_scenes_main_menu.c  avd_scenes_mainmenu.c  avd_scenes_prologue.c  avd_scenes_splash.c
avd/src/scenes/2d_radiance_cascades/: avd_scenes_2d_radiance_cascades.c
avd/src/scenes/bloom/: avd_scenes_bloom.c
avd/src/scenes/deccer_cubes/: avd_scenes_deccer_cubes.c
avd/src/scenes/draw_lists/: avd_scenes_draw_lists.c
avd/src/scenes/eyeballs/: avd_scenes_eyeballs.c
avd/src/scenes/gui/: avd_scenes_gui.c
avd/src/scenes/hls_player/: avd_scenes_hls_player.c  avd_scenes_hls_player_context.c  avd_scenes_hls_player_media_cache.c  avd_scenes_hls_player_segment_store.c  avd_scenes_hls_player_stream.c  avd_scenes_hls_player_url_pool.c  avd_scenes_hls_player_worker_pool.c
avd/src/scenes/rasterized_gi/: avd_scenes_rasterized_gi.c
avd/src/scenes/realistic_head/: avd_scenes_realistic_head.c
avd/src/scenes/subsurface_scattering/: avd_scenes_subsurface_scattering.c
avd/src/scenes/ui_system_demo/: avd_scenes_ui_system_demo.c
avd/src/shader/: avd_shader.c  avd_shader_base.c  avd_shader_compiler.c  avd_shader_shaderc.c  avd_shader_slang.c
avd/src/ui/: avd_ui.c
avd/src/vulkan/: avd_vulkan.c  avd_vulkan_buffer.c  avd_vulkan_debug.c  avd_vulkan_framebuffer.c  avd_vulkan_h264_video.c  avd_vulkan_image.c  avd_vulkan_pipeline_utils.c  avd_vulkan_presentation.c  avd_vulkan_renderer.c  avd_vulkan_swapchain.c  avd_vulkan_video.c  avd_vulkan_video_decoder.c
avd/src/vulkan/video/: avd_vulkan_video.c  avd_vulkan_video_decoder.c  avd_vulkan_video_dpb.c  avd_vulkan_video_h264_data.c
avd_assets/: CMakeLists.txt
em_assets/shaders/: BloomFrag.glsl  (+13 more)
ps_assets/: CMakeLists.txt
resources/: .gitignore  ao.md  black_hole.md  face.md  gi.md  hands.md  head.md  misc.md  rtx.md  subsurface_scattering.md  video.md  voxels.md
tools/: assets.py  shader_editor.html  tes.glsl
(+90 files in other folders)
